--- a/menuapp/AndroidManifest.xml
+++ b/menuapp/AndroidManifest.xml
@@ -4,6 +4,10 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="18" />
@@ -23,6 +27,8 @@
         </activity>
         <activity 
             android:name=".MenuActivity"/>
+        <activity 
+            android:name=".SplashActivity"/>
     </application>
 
 </manifest>
